# headset-model

./: .gitignore  LICENSE  README.md  headbox.ipynb  headset.ipynb  pyproject.toml  scratch.ipynb
exports/: batteryMountTest.stl  headband.stl  headbox.stl  kemoTestBed.stl  micClipTestbed.stl  micClipTestbed3.stl
headset/: headband.py  headbox.py  kemo_tweeter.py  params.py
