[tool.poetry]
name = "robin-headset"
version = "0.1.0"
description = ""
authors = ["Ian Reynolds <idreyn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cadquery = "^2.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
